# contiguous

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  contiguous.natvis  mdsnippets.json  sonar-project.properties  vcpkg.json
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
benchmark/cista/: cista.h
benchmark/nearestNeighbor/: benchmark.cpp  distance.hpp  graph.hpp  load.hpp  repository.hpp  search.hpp
cmake/: CntgsCompileOptions.cmake  CntgsCoverage.cmake  CntgsGitHooksInstaller.cmake  CntgsInstallGitHooks.cmake  CntgsPrepareCompileCommands.cmake
cmake/hooks/: CntgsPreCommit.cmake.in  pre-commit.in
doc/: CMakeLists.txt
example/: CMakeLists.txt  fixed-vector.cpp  mixed-vector.cpp  pmr-vector.cpp  type-erased-vector.cpp  varying-vector.cpp  vector-with-alignment.cpp  vector-with-stack-storage.cpp
src/: CMakeLists.txt  amalgamate.json  cntgs.cpp  cntgs.h  cntgs.hpp
src/cntgs/: contiguous.h  contiguous.hpp  element.hpp  iterator.hpp  parameter.hpp  reference.hpp  span.hpp  typeErasedVector.hpp  vector.hpp
src/cntgs/contiguous/: element.h  element.hpp  iterator.h  iterator.hpp  parameter.h  parameter.hpp  reference.h  reference.hpp  referenceQualifier.h  referenceQualifier.hpp  span.h  span.hpp  tuple.h  typeErasedVector.h  typeErasedVector.hpp  vector.h  vector.hpp
src/cntgs/contiguous/detail/: algorithm.h  algorithm.hpp  allocator.hpp  array.h  array.hpp  attributes.h  attributes.hpp  elementLocator.h  elementLocator.hpp  elementTraits.h  elementTraits.hpp  fixedSizeGetter.h  forward.h  forward.hpp  iterator.h  iteratorUtils.h  iteratorUtils.hpp  math.h  memory.h  memory.hpp  parameterListTraits.h  parameterListTraits.hpp  parameterParser.h  parameterTraits.h  parameterTraits.hpp  parameterType.h  parameterType.hpp  range.h  range.hpp  sizeGetter.h  sizeGetter.hpp  traits.h  tuple.h  tuple.hpp  tupleQualifier.h  typeUtils.h  typeUtils.hpp  utility.h  utility.hpp  vector.h  (+2 more)
src/cntgs/detail/: algorithm.hpp  allocator.hpp  array.hpp  attributes.hpp  elementLocator.hpp  elementTraits.hpp  forward.hpp  iterator.hpp  iteratorUtils.hpp  memory.hpp  optionsParser.hpp  parameterListTraits.hpp  parameterTraits.hpp  parameterType.hpp  range.hpp  reference.hpp  sizeGetter.hpp  storage.hpp  tuple.hpp  typeTraits.hpp  typeUtils.hpp  unmanagedVector.hpp  utility.hpp  vector.hpp  vectorTraits.hpp
test/: CMakeLists.txt  main.cpp  test-code-gen.cpp  test-contiguous.cpp  test-element.cpp  test-iterator.cpp  test-reference.cpp  test-type-erase.cpp  test-vector-alignment.cpp  test-vector-comparison.cpp  test-vector-emplace.cpp  test-vector-erase.cpp  test-vector-special-member.cpp  test-vector.cpp
test/codeGen/: codeGen.cpp  reference.hpp
test/install/: Test.cmake
test/install/user/: CMakeLists.txt
test/utils/: check.hpp  codeGenParser.cpp  codeGenParser.hpp  doctest.hpp  fixture.hpp  functional.hpp  memory.hpp  noexcept.hpp  precompiledHeader.hpp  range.hpp  string.cpp  string.hpp  testMemoryResource.hpp  typeTraits.hpp  typedefs.hpp
tests/: CMakeLists.txt  benchmark.cpp  code-gen.cpp  test-code-gen.cpp  test-contiguous.cpp
tests/codeGen/: CMakeLists.txt  codeGen.cpp  reference.h  reference.hpp
tests/install/: CMakeLists.txt
tests/install/user/: main.cpp
tests/utils/: codeGenParser.cpp  codeGenParser.h  functional.h  memory.h  precompiledHeader.hpp  range.h  reference.h  string.cpp  string.h  string.hpp
